--- a/shell/android/res/layout/input_fragment.xml
+++ b/shell/android/res/layout/input_fragment.xml
@@ -142,6 +142,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
+                        android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
@@ -223,6 +224,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
+                        android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
@@ -304,6 +306,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
+                        android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
@@ -385,6 +388,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
+                        android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
