--- a/shell/android/res/layout/mainuilayout_fragment.xml
+++ b/shell/android/res/layout/mainuilayout_fragment.xml
@@ -27,7 +27,7 @@
             android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="32dp" />
-        
+
         <ImageView
             android:id="@+id/config"
             android:layout_width="48dp"
@@ -49,7 +49,7 @@
             android:layout_marginTop="2dp"
             android:scaleType="fitCenter"
             android:src="@drawable/open_folder" />
-        
+
         <ImageView
             android:id="@+id/input"
             android:layout_width="48dp"
@@ -70,7 +70,7 @@
             android:layout_marginTop="2dp"
             android:scaleType="fitCenter"
             android:src="@drawable/question" />
-        
+
         <ImageView
             android:id="@+id/rate"
             android:layout_width="48dp"
@@ -85,6 +85,9 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+        <requestFocus />
+    </FrameLayout>
 
 </LinearLayout>
