--- a/shell/android/res/layout/drawer_menu.xml
+++ b/shell/android/res/layout/drawer_menu.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+				android:ems="12"
                 android:text="@string/browser"
                 android:textAppearance="@style/BaseText" />
         </LinearLayout>
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+				android:ems="12"
                 android:text="@string/settings"
                 android:textAppearance="@style/BaseText" />
         </LinearLayout>
@@ -90,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+				android:ems="12"
                 android:text="@string/paths"
                 android:textAppearance="@style/BaseText" />
         </LinearLayout>
@@ -118,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+				android:ems="12"
                 android:text="@string/input"
                 android:textAppearance="@style/BaseText" />
         </LinearLayout>
@@ -146,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+				android:ems="12"
                 android:text="@string/about"
                 android:textAppearance="@style/BaseText" />
         </LinearLayout>
@@ -173,7 +173,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+				android:ems="12"
                 android:text="@string/rateme"
                 android:textAppearance="@style/BaseText" />
         </LinearLayout>
