Convert to unified menu layout, Add @hooby3dfx focusable
Applied the focusable to the switches, which worked.
Applied the focusable to the list items, which seems to not have
worked. Also added the state drawable, but so far it has not allowed
scrolling the list on Nvidia Shield.

--- a/shell/android/res/layout/input_fragment.xml
+++ b/shell/android/res/layout/input_fragment.xml
@@ -62,7 +62,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/switchTouchVibrationEnabled"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
@@ -116,7 +117,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/micInPort2"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
         </TableLayout>
