--- a/shell/android/res/layout/bios_list_item.xml
+++ b/shell/android/res/layout/bios_list_item.xml
@@ -9,7 +9,10 @@
         android:id="@+id/childview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@android:drawable/list_selector_background" >
 
         <ImageView
             android:id="@+id/item_icon"
