--- a/shell/android/res/layout/configure_fragment.xml
+++ b/shell/android/res/layout/configure_fragment.xml
@@ -38,7 +38,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/unstable_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
@@ -65,7 +66,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/mipmaps_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
@@ -92,7 +94,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/stretch_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
@@ -169,7 +172,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/dynarec_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
@@ -224,7 +228,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/limitfps_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
@@ -251,7 +256,8 @@
                     <de.ankri.views.Switch
                         android:id="@+id/render_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
                 </LinearLayout>
             </TableRow>
 
