--- a/shell/android/res/layout/drawer_menu.xml
+++ b/shell/android/res/layout/drawer_menu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/menuback" >
+    android:background="@drawable/background" >
 
     <LinearLayout
         android:layout_width="match_parent"
