--- a/shell/android/res/layout/mainuilayout_fragment.xml
+++ b/shell/android/res/layout/mainuilayout_fragment.xml
@@ -13,7 +13,6 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/header"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginBottom="2dp"
@@ -33,7 +32,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/menu_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
