--- a/shell/android/res/layout/drawer_menu.xml
+++ b/shell/android/res/layout/drawer_menu.xml
@@ -19,7 +19,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical|left"
             android:layout_marginLeft="4dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:focusable="true" >
 
             <ImageView
                 android:id="@+id/browser"
@@ -48,7 +49,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical|left"
             android:layout_marginLeft="26dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:focusable="true" >
 
             <ImageView
                 android:id="@+id/config"
@@ -77,7 +79,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical|left"
             android:layout_marginLeft="4dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:focusable="true" >
 
             <ImageView
                 android:id="@+id/options"
@@ -106,7 +109,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical|left"
             android:layout_marginLeft="26dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:focusable="true" >
 
             <ImageView
                 android:id="@+id/input"
@@ -135,7 +139,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical|left"
             android:layout_marginLeft="4dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:focusable="true" >
 
             <ImageView
                 android:id="@+id/about"
@@ -164,7 +169,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical|left"
             android:layout_marginLeft="26dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:focusable="true" >
 
             <ImageView
                 android:id="@+id/rate"
